Clean up. Refactor.

--- a/notebooks/nb_002_bin_classification_datasets.ipynb
+++ b/notebooks/nb_002_bin_classification_datasets.ipynb
@@ -24,7 +24,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.data.uci.database import UCIDatabase"
+    "import sys\n",
+    "sys.path.insert(0, '..')"
    ]
   },
   {
@@ -33,13 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bin_classifiation_datasets = [\n",
-    "    'Phishing Websites',\n",
-    "    'Breast Cancer Wisconsin (Diagnostic)',\n",
-    "    'Bank Marketing',\n",
-    "    'HIGGS',\n",
-    "    'Adult'\n",
-    "]"
+    "from src.data.uci.database import UCIDatabase"
    ]
   },
   {
@@ -48,12 +43,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db = UCIDatabase()"
+    "bin_classifiation_datasets = [\n",
+    "    'Phishing Websites',\n",
+    "    'Breast Cancer Wisconsin (Diagnostic)',\n",
+    "    'Bank Marketing',\n",
+    "    'Dota2 Games Results',\n",
+    "    'Adult'\n",
+    "]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db = UCIDatabase(output_directory='../datasets', verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +73,7 @@
       "Dataset: Phishing Websites | Shape: (11055, 31)\n",
       "Dataset: Breast Cancer Wisconsin (Diagnostic) | Shape: (568, 32)\n",
       "Dataset: Bank Marketing | Shape: (4119, 21)\n",
-      "Dataset: HIGGS | Shape: (11000000, 29)\n",
+      "Dataset: Dota2 Games Results | Shape: (102944, 117)\n",
       "Dataset: Adult | Shape: (48842, 15)\n"
      ]
     }
